@@ -27,7 +27,7 @@
 	    <b>Textual domains</b></a><br>
 	   <a href="http://www.iro.umontreal.ca/translation/HTML/teams.html">
 	    <b>Language teams</b></a><br>
-	   <a href="http://www2.iro.umontreal.ca/translation/babyl.cgi">
+	   <a href="http://www.iro.umontreal.ca/translation/babyl.cgi">
 	    <b>Folders</b></a><br>
 	  </font></td></tr>
 	<tr><td height=5></td></tr>
@@ -72,7 +72,7 @@
    <tr align=center>
     <td>sq</td>
     <td><a href="http://www.iro.umontreal.ca/translation/HTML/team-sq.html">Albanian</a></td>
-    <td><a href="mailto:begraj@hotmail.com">begraj@hotmail.com</a></td>
+    <td><a href="mailto:translation-team-sq@lists.sourceforge.net">translation-team-sq@lists.sourceforge.net</a></td>
    </tr>
    <tr align=center>
     <td>am</td>
@@ -82,7 +82,7 @@
    <tr align=center>
     <td>ar</td>
     <td><a href="http://www.iro.umontreal.ca/translation/HTML/team-ar.html">Arabic</a></td>
-    <td><a href="mailto:shario@shelob.cs.umass.edu">shario@shelob.cs.umass.edu</a></td>
+    <td><a href="mailto:lumina@silverpen.de">lumina@silverpen.de</a></td>
    </tr>
    <tr align=center>
     <td>es_AR</td>
@@ -157,7 +157,7 @@
    <tr align=center>
     <td>nl</td>
     <td><a href="http://www.iro.umontreal.ca/translation/HTML/team-nl.html">Dutch</a></td>
-    <td><a href="mailto:vertaling@nl.linux.org">vertaling@nl.linux.org</a></td>
+    <td><a href="mailto:vertaling@vrijschrift.org">vertaling@vrijschrift.org</a></td>
    </tr>
    <tr align=center>
     <td>en</td>
@@ -215,6 +215,11 @@
     <td><a href="mailto:eliz@gnu.org">eliz@gnu.org</a></td>
    </tr>
    <tr align=center>
+    <td>hi</td>
+    <td><a href="http://www.iro.umontreal.ca/translation/HTML/team-hi.html">Hindi</a></td>
+    <td><a href="mailto:fedora-trans-hi@redhat.com">fedora-trans-hi@redhat.com</a></td>
+   </tr>
+   <tr align=center>
     <td>hu</td>
     <td><a href="http://www.iro.umontreal.ca/translation/HTML/team-hu.html">Hungarian</a></td>
     <td><a href="mailto:translation-team-hu@lists.sourceforge.net">translation-team-hu@lists.sourceforge.net</a></td>
@@ -250,6 +255,11 @@
     <td><a href="mailto:translation-team-rw@lists.sourceforge.net">translation-team-rw@lists.sourceforge.net</a></td>
    </tr>
    <tr align=center>
+    <td>ky</td>
+    <td><a href="http://www.iro.umontreal.ca/translation/HTML/team-ky.html">Kirghiz</a></td>
+    <td><a href="mailto:translation-team-ky@lists.sourceforge.net">translation-team-ky@lists.sourceforge.net</a></td>
+   </tr>
+   <tr align=center>
     <td>ko</td>
     <td><a href="http://www.iro.umontreal.ca/translation/HTML/team-ko.html">Korean</a></td>
     <td><a href="mailto:translation-team-ko@lists.sourceforge.net">translation-team-ko@lists.sourceforge.net</a></td>
@@ -283,6 +293,11 @@
     <td>mk</td>
     <td><a href="http://www.iro.umontreal.ca/translation/HTML/team-mk.html">Macedonian</a></td>
     <td><a href="mailto:ufo@linux.net.mk">ufo@linux.net.mk</a></td>
+   </tr>
+   <tr align=center>
+    <td>mg</td>
+    <td><a href="http://www.iro.umontreal.ca/translation/HTML/team-mg.html">Malagasy</a></td>
+    <td><a href="mailto:dikateny@linuxmg.org">dikateny@linuxmg.org</a></td>
    </tr>
    <tr align=center>
     <td>ms</td>
@@ -330,6 +345,11 @@
     <td><a href="mailto:i18n-nn@lister.ping.uio.no">i18n-nn@lister.ping.uio.no</a></td>
    </tr>
    <tr align=center>
+    <td>or</td>
+    <td><a href="http://www.iro.umontreal.ca/translation/HTML/team-or.html">Oriya</a></td>
+    <td><a href="mailto:gora_mohanty@yahoo.co.in">gora_mohanty@yahoo.co.in</a></td>
+   </tr>
+   <tr align=center>
     <td>fa</td>
     <td><a href="http://www.iro.umontreal.ca/translation/HTML/team-fa.html">Persian</a></td>
     <td><a href="mailto:translation-team-fa@lists.sourceforge.net">translation-team-fa@lists.sourceforge.net</a></td>
@@ -347,7 +367,7 @@
    <tr align=center>
     <td>pa</td>
     <td><a href="http://www.iro.umontreal.ca/translation/HTML/team-pa.html">Punjabi</a></td>
-    <td><a href="mailto:kde-i18n-pa@kde.org">kde-i18n-pa@kde.org</a></td>
+    <td><a href="mailto:fedora-trans-pa@redhat.com">fedora-trans-pa@redhat.com</a></td>
    </tr>
    <tr align=center>
     <td>rm</td>
@@ -395,6 +415,16 @@
     <td><a href="mailto:es@li.org">es@li.org</a></td>
    </tr>
    <tr align=center>
+    <td>es_IC</td>
+    <td><a href="http://www.iro.umontreal.ca/translation/HTML/team-es_IC.html">Spanish (Canary Islands)</a></td>
+    <td><a href="mailto:es_ic@eListas.net">es_ic@eListas.net</a></td>
+   </tr>
+   <tr align=center>
+    <td>sw</td>
+    <td><a href="http://www.iro.umontreal.ca/translation/HTML/team-sw.html">Swahili</a></td>
+    <td><a href="mailto:translation-team-sw@lists.sourceforge.net">translation-team-sw@lists.sourceforge.net</a></td>
+   </tr>
+   <tr align=center>
     <td>ss</td>
     <td><a href="http://www.iro.umontreal.ca/translation/HTML/team-ss.html">Swati</a></td>
     <td><a href="mailto:swati@translate.org.za">swati@translate.org.za</a></td>
@@ -403,6 +433,11 @@
     <td>sv</td>
     <td><a href="http://www.iro.umontreal.ca/translation/HTML/team-sv.html">Swedish</a></td>
     <td><a href="mailto:sv@li.org">sv@li.org</a></td>
+   </tr>
+   <tr align=center>
+    <td>tg</td>
+    <td><a href="http://www.iro.umontreal.ca/translation/HTML/team-tg.html">Tajik</a></td>
+    <td><a href="mailto:translations@tajikngo.org">translations@tajikngo.org</a></td>
    </tr>
    <tr align=center>
     <td>ta</td>
@@ -418,6 +453,11 @@
     <td>tr</td>
     <td><a href="http://www.iro.umontreal.ca/translation/HTML/team-tr.html">Turkish</a></td>
     <td><a href="mailto:gnu-tr-u12a@lists.sourceforge.net">gnu-tr-u12a@lists.sourceforge.net</a></td>
+   </tr>
+   <tr align=center>
+    <td>tk</td>
+    <td><a href="http://www.iro.umontreal.ca/translation/HTML/team-tk.html">Turkmen</a></td>
+    <td><a href="mailto:kakilikgroup@yahoo.com">kakilikgroup@yahoo.com</a></td>
    </tr>
    <tr align=center>
     <td>uk</td>
@@ -455,7 +495,7 @@
     <td><a href="mailto:zulu@translate.org.za">zulu@translate.org.za</a></td>
    </tr>
   </table>
-      <p><font size="-1">Last recomputed on 2004-05-22 13:33 -0400</font></p>
+      <p><font size="-1">Last recomputed on 2005-03-17 06:59 -0500</font></p>
      </td>
 
     </tr>
