@@ -1,1 +1,1 @@
-http://www2.iro.umontreal.ca/~pinard/po/registry.cgi?team=index
+http://www.iro.umontreal.ca/translation/registry.cgi?team=index
