@@ -1,3 +1,9 @@
+2005-03-17  Bruno Haible  <bruno@clisp.org>
+
+	* TP/teams.url: Update.
+	* TP/teams.html: Update.
+	Reported by Alexandre Duret-Lutz <adl@src.lip6.fr>.
+
 2005-03-14  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.14.3 released.
